--- a/Medizinplattform/WebContent/index.xhtml
+++ b/Medizinplattform/WebContent/index.xhtml
@@ -6,15 +6,9 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 
-<ui:composition template="/templates/custom_template.xhtml">
-	<ui:define name="header">
-	    Add your header here or delete to use the default
-	</ui:define>
+<ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
-	    Add your content here or delete to use the default
-	</ui:define>
-	<ui:define name="footer">
-	    Add your footer here or delete to use the default
+	    Here some intro stuff dunno and command link to log-in and register
 	</ui:define>
 </ui:composition>
 </html>
