--- a/Medizinplattform/WebContent/login.xhtml
+++ b/Medizinplattform/WebContent/login.xhtml
@@ -7,14 +7,16 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:composition template="">
-	<ui:define name="header">
-	    Add your header here or delete to use the default
-	</ui:define>
 	<ui:define name="content">
-	    Add your content here or delete to use the default
-	</ui:define>
-	<ui:define name="footer">
-	    Add your footer here or delete to use the default
+	   <h:form>
+            <h:panelGrid columns="2">
+                <h:outputText value="Name"></h:outputText>
+                <h:inputText value="blah"></h:inputText>
+                <h:outputText value="Password"></h:outputText>
+                <h:inputSecret value="blah"></h:inputSecret>
+            </h:panelGrid>
+            <h:commandButton value="Login" action="login"></h:commandButton>
+        </h:form>
 	</ui:define>
 </ui:composition>
 </html>
