Some mock authentication made

--- a/Medizinplattform/WebContent/index.xhtml
+++ b/Medizinplattform/WebContent/index.xhtml
@@ -7,16 +7,9 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:composition template="/templates/template.xhtml">
+	<ui:define name="#indexBean.header"></ui:define>
 	<ui:define name="content">
-	    <table id="newsflash_table">
-      		<tr>
-       			<h:form>
-        			<td>
-        				<h:commandLink style="background-color:white;" value="Log-IN" action="login" />
-        			</td>
-        		</h:form>
-      		</tr>
-    </table>
+	    Here some content about MediPlatt like what it is and what it does, and maybe a form for registration.
 	</ui:define>
 </ui:composition>
 </html>
