--- a/Medizinplattform/WebContent/login.xhtml
+++ b/Medizinplattform/WebContent/login.xhtml
@@ -8,6 +8,7 @@
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
+	   
 	   <h:form>
             <h:panelGrid columns="2">
                 <h:outputText value="Name"></h:outputText>
@@ -15,7 +16,7 @@
                 <h:outputText value="Password"></h:outputText>
                 <h:inputSecret value="#{loginBean.password}"></h:inputSecret>
             </h:panelGrid>
-            <h:commandButton value="Login" action="login"></h:commandButton>
+            <h:commandButton value="Login" action="#{loginBean.check()}"></h:commandButton>
         </h:form>
 	</ui:define>
 </ui:composition>
