put login logic to loginBean, and session data to userBean create chronicle.xhtml

--- a/Medizinplattform/WebContent/chronicle.xhtml
+++ b/Medizinplattform/WebContent/chronicle.xhtml
@@ -8,7 +8,7 @@
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
-	    Your registration was succesful. Try to login now.
+	    Here you could see and browse all the nice diagramms and stuff.
 	</ui:define>
 </ui:composition>
 </html>
