--- a/Medizinplattform/WebContent/index.xhtml
+++ b/Medizinplattform/WebContent/index.xhtml
@@ -7,9 +7,8 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:composition template="/templates/template.xhtml">
-	<ui:define name="#indexBean.header"></ui:define>
 	<ui:define name="content">
-	    Here some content about MediPlatt like what it is and what it does, and maybe a form for registration.
+	    Welcome to MediPlatt!Mediplatt is really really useful, if you want to controll your health.
 	</ui:define>
 </ui:composition>
 </html>
