--- a/Medizinplattform/WebContent/register.xhtml
+++ b/Medizinplattform/WebContent/register.xhtml
@@ -14,7 +14,7 @@
             <h:panelGrid columns="2">
                 <h:outputText value="Choose a name"></h:outputText>
                 <h:inputText value="#{registerBean.name}"></h:inputText>
-                <h:outputText value="Create password"></h:outputText>
+                <h:outputText value="Create a password"></h:outputText>
                 <h:inputSecret value="#{registerBean.password}"></h:inputSecret>
             </h:panelGrid>
             <h:commandButton value="Register" action="#{registerBean.registerUser()}"></h:commandButton>
