few little changes

--- a/Medizinplattform/WebContent/chronicle.xhtml
+++ b/Medizinplattform/WebContent/chronicle.xhtml
@@ -8,7 +8,8 @@
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
-	    Here you could see and browse all the nice diagramms and stuff.
+	    Here you could see and browse all the nice diagramms and stuff.<br></br>
+	    <h:graphicImage library="images" name="chronicle.png" />
 	</ui:define>
 </ui:composition>
 </html>
