--- a/Medizinplattform/WebContent/index.xhtml
+++ b/Medizinplattform/WebContent/index.xhtml
@@ -8,7 +8,8 @@
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
-	    Welcome to MediPlatt!Mediplatt is really really useful, if you want to controll your health.
+	    Welcome to MediPlatt!Mediplatt is really really useful, if you want to controll your health.<br></br>
+	    Some changes blah blah.
 	</ui:define>
 </ui:composition>
 </html>
