My changes for tests

--- a/Medizinplattform/WebContent/index.xhtml
+++ b/Medizinplattform/WebContent/index.xhtml
@@ -10,6 +10,7 @@
 	<ui:define name="content">
 	    Welcome to MediPlatt!Mediplatt is really really useful, if you want to controll your health.<br></br>
 	    Some changes blah blah.
+	    And even more changes from Ilja-Weber
 	</ui:define>
 </ui:composition>
 </html>
