--- a/Medizinplattform/WebContent/index.xhtml
+++ b/Medizinplattform/WebContent/index.xhtml
@@ -10,7 +10,7 @@
 	<ui:define name="content">
 	    Welcome to MediPlatt!Mediplatt is really really useful, if you want to controll your health.<br></br>
 	    Some changes blah blah.
-	    And even more changes from Ilja-Weber
+	    Мне не нравится этот коммит, я лучше напишу здесь что-то по-русски.
 	</ui:define>
 </ui:composition>
 </html>
