--- a/Medizinplattform/WebContent/index.xhtml
+++ b/Medizinplattform/WebContent/index.xhtml
@@ -9,8 +9,9 @@
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
 	    Welcome to MediPlatt!Mediplatt is really really useful, if you want to controll your health.<br></br>
-	    Some changes blah blah.
+	    Some changes blah blah
 	    Мне не нравится этот коммит, я лучше напишу здесь что-то по-русски.
+	    Спасибо Илья!
 	</ui:define>
 </ui:composition>
 </html>
