--- a/Medizinplattform/WebContent/admin.xhtml
+++ b/Medizinplattform/WebContent/admin.xhtml
@@ -9,7 +9,7 @@
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
 		
-		<h:dataTable value="#{users.getUsers()}" var="userVar">
+		<h:dataTable value="#{users.users}" var="userVar">
 			<h:column>
 				<f:facet name="header">Name</f:facet>    				
      	 		#{userVar.name}
