--- a/Medizinplattform/WebContent/index.xhtml
+++ b/Medizinplattform/WebContent/index.xhtml
@@ -8,6 +8,8 @@
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
+	    Hey, Fabian!<br></br>
+	    
 	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mattis enim sit amet erat mollis feugiat. Duis dolor eros, vestibulum a arcu nec, facilisis placerat diam. Phasellus et lorem molestie, pellentesque purus sit amet, dapibus eros. Donec posuere lorem dolor, eget lobortis dui euismod et. Donec a orci ac metus volutpat fringilla. Mauris nunc dui, facilisis sed magna id, volutpat blandit mauris. Donec risus nisi, pellentesque at pellentesque non, pulvinar in lorem. Vivamus porttitor lorem massa, et posuere magna semper eu. Praesent sit amet sapien ultrices, suscipit ligula ac, dignissim lectus.
 
 		Duis consequat placerat enim porttitor lobortis. Maecenas vitae arcu at lorem porta consequat eu eget nunc. Vestibulum non arcu mattis, dignissim dui nec, egestas orci. Vivamus ultrices aliquam ipsum, eget congue ipsum aliquet nec. Fusce luctus magna vestibulum felis hendrerit, sed dignissim turpis scelerisque. Nunc lacinia euismod libero non bibendum. Suspendisse potenti. Phasellus tristique, nunc sed placerat volutpat, libero mi lacinia turpis, et blandit purus risus sit amet nibh. Vestibulum vulputate elit id dolor commodo feugiat. Praesent tempor sapien vitae dui blandit porttitor nec at neque. Morbi sit amet iaculis turpis, quis lacinia nulla.
