--- a/Medizinplattform/WebContent/index.xhtml
+++ b/Medizinplattform/WebContent/index.xhtml
@@ -8,14 +8,11 @@
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
-	    <b>Katya</b>
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mattis enim sit amet erat mollis feugiat. Duis dolor eros, vestibulum a arcu nec, facilisis placerat diam. Phasellus et lorem molestie, pellentesque purus sit amet, dapibus eros. Donec posuere lorem dolor, eget lobortis dui euismod et. Donec a orci ac metus volutpat fringilla. Mauris nunc dui, facilisis sed magna id, volutpat blandit mauris. Donec risus nisi, pellentesque at pellentesque non, pulvinar in lorem. Vivamus porttitor lorem massa, et posuere magna semper eu. Praesent sit amet sapien ultrices, suscipit ligula ac, dignissim lectus.
-
-		Duis consequat placerat enim porttitor lobortis. Maecenas vitae arcu at lorem porta consequat eu eget nunc. Vestibulum non arcu mattis, dignissim dui nec, egestas orci. Vivamus ultrices aliquam ipsum, eget congue ipsum aliquet nec. Fusce luctus magna vestibulum felis hendrerit, sed dignissim turpis scelerisque. Nunc lacinia euismod libero non bibendum. Suspendisse potenti. Phasellus tristique, nunc sed placerat volutpat, libero mi lacinia turpis, et blandit purus risus sit amet nibh. Vestibulum vulputate elit id dolor commodo feugiat. Praesent tempor sapien vitae dui blandit porttitor nec at neque. Morbi sit amet iaculis turpis, quis lacinia nulla.
-
-		Cras elementum tristique odio, eu iaculis risus molestie ut. Morbi lectus erat, feugiat non congue quis, lobortis sit amet purus. Maecenas sollicitudin lacus eget risus lacinia, pharetra consequat elit ultrices. Cras gravida vel sem ut tristique. Sed ullamcorper neque porta porta tempor. Nulla volutpat velit a dui ultrices venenatis. Nunc ut pharetra quam. Nulla elementum ultrices tempus. Praesent sit amet justo risus. Nullam imperdiet ante eu nulla dapibus scelerisque. Aliquam turpis mauris, dapibus vel enim et, rhoncus iaculis enim. Etiam blandit, lorem in condimentum sagittis, enim metus hendrerit purus, vel vestibulum urna ante a mauris. Integer nec purus at sapien lacinia eleifend consequat non nisl. Proin fermentum urna sit amet ante tempor, quis consectetur magna cursus. Etiam id enim in dolor pretium fermentum. Maecenas suscipit mattis tortor in consectetur.
-
-		Mauris tincidunt nibh eu leo placerat, in cursus risus faucibus. Integer purus massa, vulputate a euismod nec, commodo eget mauris. Pellentesque commodo purus ut porttitor viverra. Aenean nec molestie nisl, id tristique orci. Praesent sodales nulla nisl. Nam dapibus tempor egestas. Vivamus egestas lorem id elementum facilisis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum malesuada nibh porta gravida ornare. Integer pellentesque odio ac eros mollis sagittis. Aliquam ipsum libero, feugiat id sagittis sit amet, pharetra in lacus. 
+	  <div class="common-content">
+	  	Here we have our index content, which is not here right now.
+	  	Maybe some text about MediPlatt, few Screenshots and a form form registration.
+	  	Or something like that.
+	  </div>
 	</ui:define>
 </ui:composition>
 </html>
