--- a/Medizinplattform/WebContent/registration-success.xhtml
+++ b/Medizinplattform/WebContent/registration-success.xhtml
@@ -8,7 +8,11 @@
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
-	    falsche password!!! Probieren Sie es noch ein Mal
+	 <div class="common-content">
+	    <h1>Your registration was successful. Try to login now.</h1>
+	    <h6>...or maybe later</h6>
+	 </div>  
 	</ui:define>
 </ui:composition>
 </html>
+
