--- a/Medizinplattform/WebContent/admin.xhtml
+++ b/Medizinplattform/WebContent/admin.xhtml
@@ -7,70 +7,74 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:composition template="/templates/template.xhtml">
-	<ui:define name="content">
-		<h:form>
-			<h:commandButton  	rendered="#{not adminBean.getNewUserC().newUserFormVisible}"
-								value="create new user" 
-								action="#{adminBean.getNewUserC().showNewUserForm()}"></h:commandButton>
-			<h:panelGroup rendered="#{adminBean.getNewUserC().newUserFormVisible}">
-			<table>
+<ui:define name="content">
+<div class="common-content">
+
+<div id="new_user">			
+<h:form>
+<h:panelGroup rendered="#{not adminBean.getNewUserC().newUserFormVisible}">
+<div id="new_user_button">
+	<h:commandButton  value="create new user" action="#{adminBean.getNewUserC().showNewUserForm()}"></h:commandButton>
+</div>
+</h:panelGroup>
+
+<h:panelGroup rendered="#{adminBean.getNewUserC().newUserFormVisible}">
+<div id="new_user_form">
+	<table>
+		<tr>
+			<td>
+				<h:outputText class="text" value=" Name"></h:outputText>
+			</td>
+			<td>
+				<h:outputText class="text" value=" Password"></h:outputText>
+			</td>
+			<td>
+				<h:outputText class="text" value=" Role"></h:outputText>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<h:inputText class="name-input" value="#{adminBean.getNewUserC().name}"></h:inputText>
+			</td>
+			<td>
+				<h:inputText class="password-input" value="#{adminBean.getNewUserC().password}"></h:inputText>
+			</td>
+			<td>
+				<h:selectOneMenu class="role-input" value="#{adminBean.getNewUserC().role}">
+					<f:selectItem itemValue="user"/>
+					<f:selectItem itemValue="admin" />   								
+				</h:selectOneMenu>
+			</td>
+			<td>
+				<h:commandButton class="create-button" value="create" action="#{adminBean.getNewUserC().createButton()}"></h:commandButton>
+			</td>
+			<td>
+				<h:commandButton class="cancel-button" value="cancel" action="#{adminBean.getNewUserC().cancelButton()}"></h:commandButton>
+			</td>
+		</tr>
+	</table>
+</div>
+</h:panelGroup>
+</h:form>
+</div>
+
+
+<div id="user_table">
+	<h:form>
+		<ui:repeat value="#{adminBean.usersC}" var="userBeanComponent" varStatus="status">
+		
+		<div class="row-even-#{status.even}">
+		<table>
 				<tr>
-					<td>
-						<h:outputText value="Name"></h:outputText>
-					</td>
-					<td>
-						<h:outputText value="Password"></h:outputText>
-					</td>
-					<td>
-						<h:outputText value="Role"></h:outputText>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<h:inputText value="#{adminBean.getNewUserC().name}"></h:inputText>
-					</td>
-					<td>
-						<h:inputText value="#{adminBean.getNewUserC().password}"></h:inputText>
-					</td>
-					<td>
-						<h:selectOneMenu value="#{adminBean.getNewUserC().role}">
-   								<f:selectItem itemValue="admin"/>
-   								<f:selectItem itemValue="user" />   								
-   						</h:selectOneMenu>
-					</td>
-					<td>
-						<h:commandButton value="create" action="#{adminBean.getNewUserC().createButton()}"></h:commandButton>
-						<h:commandButton value="cancel" action="#{adminBean.getNewUserC().cancelButton()}"></h:commandButton>
-					</td>
-				</tr>
-			</table>
-			</h:panelGroup>			
-		</h:form>
-		<hr></hr>
-		<h:form>
-			<table>
-				<tr>
-					<td>
-						<h:outputText value="Name"></h:outputText>
-					</td>
-					<td>
-						<h:outputText value="Password"></h:outputText>
-					</td>
-					<td>
-						<h:outputText value="Role"></h:outputText>
-					</td>
-				</tr>
-				<ui:repeat var="userBeanComponent" value="#{adminBean.usersC}">
-				<tr>
-					<td>
+					<td class="user-name">
 						<h:outputText value="#{userBeanComponent.name}"  rendered="#{not userBeanComponent.beingEdited}"></h:outputText>
-						<h:inputText value="#{userBeanComponent.name}" rendered="#{userBeanComponent.beingEdited}"></h:inputText>
+						<h:inputText class="name-input" value="#{userBeanComponent.name}" rendered="#{userBeanComponent.beingEdited}"></h:inputText>
 					</td>
-					<td>
+					<td class="user-password">
 						<h:outputText value="#{userBeanComponent.password}"  rendered="#{not userBeanComponent.beingEdited}"></h:outputText>
-						<h:inputText value="#{userBeanComponent.password}" rendered="#{userBeanComponent.beingEdited}"></h:inputText>
+						<h:inputText class ="password-input" value="#{userBeanComponent.password}" rendered="#{userBeanComponent.beingEdited}"></h:inputText>
 					</td>
-					<td>
+					<td class="user-role">
 						<h:outputText value="#{userBeanComponent.role}"  rendered="#{not userBeanComponent.beingEdited}"></h:outputText>
 						<h:panelGroup>
 							<h:selectOneMenu value="#{userBeanComponent.role}" rendered="#{userBeanComponent.beingEdited}">
@@ -79,27 +83,22 @@
    							</h:selectOneMenu>
 						</h:panelGroup>
 					</td>
-					<td>
-						<h:commandButton 	value="edit" 
-											action="#{userBeanComponent.editButton()}"
-											rendered="#{not userBeanComponent.beingEdited}"></h:commandButton>
-					
-					
-						<h:commandButton 	value="save" 
-											action="#{userBeanComponent.saveButton()}"
-											rendered="#{userBeanComponent.beingEdited}"></h:commandButton>
-						<h:commandButton 	value="cancel" 
-											action="#{userBeanComponent.cancelButton()}"
-											rendered="#{userBeanComponent.beingEdited}"></h:commandButton>
+					<td class="user-edit">
+						<h:commandButton value="edit" action="#{userBeanComponent.editButton()}" rendered="#{not userBeanComponent.beingEdited}"></h:commandButton>
+						<h:commandButton value="V" action="#{userBeanComponent.saveButton()}" rendered="#{userBeanComponent.beingEdited}"></h:commandButton>
+						<h:commandButton value="X" action="#{userBeanComponent.cancelButton()}" rendered="#{userBeanComponent.beingEdited}"></h:commandButton>
 					</td>
-					<td>
-						<h:commandButton value="delete" action="#{userBeanComponent.deleteButton()}"></h:commandButton>
+					<td class="user-remove">
+						<h:commandButton value="delete" action="#{userBeanComponent.deleteButton()}" rendered="#{not userBeanComponent.beingEdited}"></h:commandButton>
 					</td>
 				</tr>
-				</ui:repeat>
-			</table>
-		</h:form>
-		<hr></hr>	
-	</ui:define>
+		</table>	
+		</div>
+		</ui:repeat>
+	</h:form>
+</div>
+
+</div>	
+</ui:define>
 </ui:composition>
 </html>
