some kind of structture for new story form

--- a/Medizinplattform/WebContent/chronicle.xhtml
+++ b/Medizinplattform/WebContent/chronicle.xhtml
@@ -15,6 +15,38 @@
 			<h:panelGroup>
 				<h:commandButton value="Press me"></h:commandButton>
 			</h:panelGroup>
+			
+			<h:panelGroup>
+				<div id="new-story-form">
+					<div id="new-story-form-header">
+						<h:commandButton value="headerbutton"></h:commandButton>
+					</div>
+					
+					<div id="new-story-form-body">
+						<div id="new-story-form-content">
+							<div id="new-story-form-textline">
+							</div>
+							
+							<div id="new-story-form-command-elements">
+								<table><tr>
+									<td>
+										<h:inputText value="date"></h:inputText>
+									</td>
+									<td>
+										<h:inputText value="time"></h:inputText>
+									</td>
+									<td>
+										<h:commandButton value="save"></h:commandButton>
+									</td>
+									<td>
+										<h:commandButton value="cancel"></h:commandButton>
+									</td>
+								</tr></table>
+							</div>
+						</div>
+					</div>
+				</div>
+			</h:panelGroup>
 		</h:form>
 	</div>
 	
