some styles for new story form

--- a/Medizinplattform/WebContent/chronicle.xhtml
+++ b/Medizinplattform/WebContent/chronicle.xhtml
@@ -25,20 +25,21 @@
 					<div id="new-story-form-body">
 						<div id="new-story-form-content">
 							<div id="new-story-form-textline">
+								<h:inputText style="width:99.2%" value="some text"></h:inputText>
 							</div>
 							
 							<div id="new-story-form-command-elements">
 								<table><tr>
-									<td>
+									<td id="t-date">
 										<h:inputText value="date"></h:inputText>
 									</td>
-									<td>
+									<td id="t-time">
 										<h:inputText value="time"></h:inputText>
 									</td>
-									<td>
+									<td id="t-save">
 										<h:commandButton value="save"></h:commandButton>
 									</td>
-									<td>
+									<td id="t-cancel">
 										<h:commandButton value="cancel"></h:commandButton>
 									</td>
 								</tr></table>
