--- a/Medizinplattform/WebContent/chronicle.xhtml
+++ b/Medizinplattform/WebContent/chronicle.xhtml
@@ -13,11 +13,7 @@
 	<ui:include src="templates/chronicle-new-story.xhtml"/>
 	
 	<div id="stories-area">
-		<ui:repeat value="#{chronicleBean.storiesC}" var="pom">
-			<div class="story-area">
-			STORY
-			</div>
-		</ui:repeat>
+		TODO: STORY
 	</div>
 
 </div>
