new sotry creatin will be in a different xhtml file

--- a/Medizinplattform/WebContent/chronicle.xhtml
+++ b/Medizinplattform/WebContent/chronicle.xhtml
@@ -8,15 +8,11 @@
 
 <ui:composition template="/templates/template.xhtml">
 <ui:define name="content">
-<div class="common-content">
-
-	<ui:include src="templates/chronicle-new-story.xhtml"/>
-	
-	<div id="stories-area">
-		TODO: STORY
+	<div class="common-content">
+		<h:form>
+			<h:commandButton value="start new story" action="#{chronicleBean.gotoOptions()}"></h:commandButton>	
+		</h:form>
 	</div>
-
-</div>
 </ui:define>
 </ui:composition>
 </html>
