--- a/Medizinplattform/WebContent/login.xhtml
+++ b/Medizinplattform/WebContent/login.xhtml
@@ -25,7 +25,7 @@
 					</tr>
 					<tr>
 						<td>
-							<h:inputText styleClass="input-field" value="#{loginBean.name}" tabindex="1">
+							<h:inputText styleClass="input-field" value="#{loginBean.name}" tabindex="1" label="Name">
 							<f:validateRequired/>
 							</h:inputText>
 						</td>
@@ -37,7 +37,7 @@
 					</tr>
 					<tr>
 						<td>
-							<h:inputSecret  styleClass="input-field" value="#{loginBean.password}" tabindex="2">
+							<h:inputSecret  styleClass="input-field" value="#{loginBean.password}" tabindex="2" label="Password">
 								<f:validateLength minimum="4" />
 								<f:validateRegex pattern="[a-zA-Z0-9]*"/>
 								<f:validateRequired/>
