delete some unused classes

--- a/Medizinplattform/WebContent/chronicle.xhtml
+++ b/Medizinplattform/WebContent/chronicle.xhtml
@@ -10,7 +10,7 @@
 <ui:define name="content">
 	<div class="common-content">
 		<div>
-			<ui:include src="templates/options.xhtml"/>
+			<ui:include src="composites/options.xhtml"/>
 		</div>
 	</div>
 </ui:define>
